--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,513 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@font-face {
+  font-family: "Futura PT";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Futura PT Medium"), url("../assets/fonts/FuturaCyrillicMedium.woff") format("woff");
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  font-family: "Inter";
+}
 
+.page {
+  overflow-x: hidden;
+}
+
+.hero {
+  background: radial-gradient(50% 81.67% at 50% 100%, rgba(246, 243, 239, 0) 0%, #f6f3ef 100%);
+  height: 690px;
+}
+.hero__container {
+  max-width: 1500px;
+  margin: 0 auto;
+  height: 100%;
+  padding: 50px;
+  background: url("../assets/icons/hero-bg-2.svg") 50px top no-repeat, url("../assets/icons/hero-bg.svg") center top no-repeat, url("../assets/icons/hero-bg-2.svg") right 50px top no-repeat;
+}
+.hero__title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #1d2b3f;
+  text-align: center;
+  font-family: "Futura PT";
+  font-size: 52px;
+  font-weight: 450;
+  line-height: 110%;
+  margin-bottom: 50px;
+}
+.hero__title img {
+  margin: 0 10px -5px 10px;
+}
+.hero__title span {
+  font-family: "Futura PT";
+  display: flex;
+  align-items: end;
+}
+.hero-download {
+  justify-content: center;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  padding: 40px 0;
+  margin-bottom: 10px;
+}
+
+.download {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.download__links {
+  display: none;
+  flex-direction: column;
+  gap: 13.5px;
+}
+.download__text {
+  max-width: 170px;
+  color: #1d2b3f;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 150%;
+}
+
+.app-yellow {
+  padding: 0 50px;
+  margin-top: -220px;
+  overflow: hidden;
+}
+.app-yellow__container {
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
+  max-width: 1170px;
+}
+.app-yellow__info {
+  max-width: 270px;
+  margin-top: 260px;
+}
+.app-yellow__text {
+  color: #000;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 150%;
+  position: relative;
+  z-index: 1;
+}
+.app-yellow__text::after {
+  content: "";
+  position: absolute;
+  top: -150px;
+  right: -65px;
+  width: 425px;
+  height: 480px;
+  border-radius: 50%;
+  background: linear-gradient(180deg, rgba(244, 233, 81, 0.5) 0%, #f4e951 100%);
+  transform: rotate(-120deg);
+  z-index: -3;
+}
+.app-yellow__text_bold {
+  font-size: 26px;
+  font-weight: 600;
+  display: block;
+  margin-top: 25px;
+}
+.app-yellow__screenshots {
+  z-index: 1;
+}
+.app-yellow-download {
+  position: relative;
+  max-width: 270px;
+  margin-top: 260px;
+}
+.app-yellow-download::after {
+  content: "";
+  position: absolute;
+  bottom: -30px;
+  right: -60px;
+  width: 620px;
+  height: 700px;
+  border-radius: 50%;
+  border: 1px solid #ded5d5;
+  transform: rotate(120deg);
+  z-index: -1;
+}
+.app-yellow-download__text {
+  color: #2d3436;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 150%;
+  margin-bottom: 40px;
+}
+.app-yellow-download__links {
+  display: flex;
+  flex-direction: column;
+  gap: 13.5px;
+}
+
+.swiper {
+  margin-top: 50px;
+}
+.swiper__controls {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 40px;
+}
+.swiper__control {
+  width: 6px;
+  height: 6px;
+  background: #ebe5de;
+  border-radius: 100%;
+  transition: all 0.5s ease;
+}
+.swiper__control_active {
+  width: 18px;
+  background: #b68756;
+  border-radius: 50px;
+  transition: all 0.5s ease;
+}
+.swiper__container {
+  overflow: hidden;
+  margin: 0 auto;
+  padding: 0 50px;
+}
+.swiper__wrapper {
+  min-width: 100%;
+  display: flex;
+  gap: 30px;
+  transition: all 0.5s ease;
+  justify-content: center;
+}
+.swiper__slide {
+  min-width: 770px;
+  padding: 50px 100px 0;
+  display: flex;
+  gap: 60px;
+  align-items: center;
+  overflow: hidden;
+  border-radius: 30px;
+  background: #f6f3ef;
+  user-select: none;
+}
+.swiper__slide-info {
+  max-width: 270px;
+  width: 100%;
+}
+.swiper__slide-title {
+  color: #000;
+  font-size: 26px;
+  font-weight: 500;
+  line-height: 150%;
+  margin-bottom: 20px;
+}
+.swiper__slide-subtitle {
+  color: #000;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 150%;
+}
+.swiper__slide-image {
+  position: relative;
+  pointer-events: none;
+  margin-bottom: -5px;
+}
+.swiper__slide-image img {
+  position: relative;
+  z-index: 5;
+}
+.swiper__slide-image::before {
+  content: "";
+  position: absolute;
+  left: -30px;
+  top: 60px;
+  width: 240px;
+  height: 495px;
+  border-radius: 15px;
+  background: #ebe5de;
+  z-index: 1;
+}
+.swiper__slide-image::after {
+  content: "";
+  position: absolute;
+  right: -30px;
+  top: 30px;
+  width: 240px;
+  height: 495px;
+  border-radius: 15px;
+  background: #ebe5de;
+  z-index: 1;
+}
+
+.download-app {
+  margin: 80px 0 105px;
+}
+.download-app__container {
+  max-width: 570px;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.download-app__top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 150px;
+  height: 150px;
+  border-radius: 30px;
+  background: #f4f6f7;
+}
+.download-app__image {
+  width: 91px;
+}
+.download-app__image img {
+  width: 100%;
+}
+.download-app__text {
+  color: #000;
+  text-align: center;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 150%;
+}
+.download-app__text span {
+  border-bottom: 2px solid #000;
+}
+.download-app__links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  margin: 0 auto;
+}
+
+.app-blue {
+  overflow: hidden;
+  padding: 0 50px 115px;
+}
+.app-blue__container {
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 155px;
+}
+.app-blue__info {
+  max-width: 470px;
+  position: relative;
+  margin-top: 200px;
+}
+.app-blue__info::after {
+  content: "";
+  position: absolute;
+  top: -70px;
+  left: -15px;
+  width: 620px;
+  height: 700px;
+  border-radius: 50%;
+  border: 1px solid #ded5d5;
+  transform: rotate(120deg);
+  z-index: -5;
+}
+.app-blue__text {
+  color: #2d3436;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 150%;
+  margin-bottom: 40px;
+}
+.app-blue__image {
+  position: relative;
+}
+.app-blue__image::after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: -40px;
+  width: 610px;
+  height: 690px;
+  border-radius: 50%;
+  background: linear-gradient(180deg, rgba(0, 86, 255, 0.5) 0%, #0056ff 100%);
+  transform: rotate(-120deg);
+  z-index: -3;
+}
+.app-blue__help {
+  max-width: 1170px;
+  height: 60px;
+  margin: 100px auto 0;
+  border-radius: 9px;
+  background: #f8f2ec;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  color: #000;
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 112%;
+}
+.app-blue__help-link {
+  color: #b68756;
+  font-weight: 700;
+  text-decoration-line: underline;
+}
+
+@media screen and (max-width: 1095px) {
+  .hero__container {
+    background: url(../assets/icons/hero-bg-2.svg) center top no-repeat;
+    padding: 50px 30px;
+  }
+  .app-yellow {
+    padding: 0 30px 40px;
+  }
+  .app-yellow__container {
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+  }
+  .app-yellow__info {
+    margin-top: 200px;
+  }
+  .app-yellow-download {
+    margin-top: 50px;
+    text-align: center;
+  }
+  .app-yellow-download::after {
+    bottom: -65px;
+    right: -175px;
+  }
+  .app-blue {
+    padding: 0 30px 115px;
+  }
+  .app-blue__container {
+    flex-direction: column;
+    gap: 100px;
+  }
+  .app-blue__info::after {
+    top: -155px;
+    left: -90px;
+  }
+  .download-app {
+    padding: 0 30px;
+  }
+}
+@media screen and (max-width: 820px) {
+  .swiper__slide {
+    min-width: 600px;
+    padding: 50px 40px 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .download__links {
+    display: flex;
+  }
+  .download__qr {
+    display: none;
+  }
+}
+@media screen and (max-width: 630px) {
+  .hero__title img {
+    display: none;
+  }
+  .hero__title::before {
+    content: url("../assets/icons/mt.svg");
+    display: inline-block;
+    margin-bottom: 10px;
+  }
+  .swiper__slide {
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 300px;
+    padding: 40px 30px 0;
+  }
+}
+@media screen and (max-width: 545px) {
+  .hero__container {
+    background: url(../assets/icons/hero-bg-mobile.svg) center no-repeat;
+    background-size: 415px;
+    padding: 50px 10px;
+  }
+  .hero__title {
+    font-size: 36px;
+  }
+  .download {
+    flex-direction: column;
+  }
+  .download__text {
+    max-width: 300px;
+    text-align: center;
+  }
+  .app-yellow {
+    margin-top: -100px;
+    padding: 0 10px 40px;
+  }
+  .app-yellow__image {
+    width: 300px;
+    height: 392px;
+  }
+  .app-yellow__image img {
+    width: 100%;
+    height: 100%;
+  }
+  .app-yellow-download::after {
+    width: 440px;
+    height: 495px;
+    bottom: -55px;
+    right: -75px;
+  }
+  .swiper__slide {
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 300px;
+    padding: 40px 30px 0;
+  }
+  .download-app {
+    padding: 0 10px;
+  }
+  .download-app__links {
+    gap: 13.5px;
+  }
+  .app-blue {
+    padding: 0 10px 50px;
+  }
+  .app-blue__info {
+    margin-top: 0;
+    order: 2;
+  }
+  .app-blue__info::after {
+    width: 420px;
+    height: 475px;
+    top: -90px;
+    left: -70px;
+  }
+  .app-blue__text {
+    max-width: 300px;
+  }
+  .app-blue__image {
+    order: 1;
+  }
+  .app-blue__image img {
+    max-width: 300px;
+  }
+  .app-blue__image::after {
+    width: 380px;
+    height: 430px;
+  }
+  .app-blue__help {
+    margin: 35px auto 0;
+    font-size: 16px;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
